workspace/correlation_ver2_axis/.metadata/.plugins/org.eclipse.core.resources/.history/4f/7164efe648e200161a93cfd3079a182a
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2014.4
Copyright (C) 2014 Xilinx Inc. All rights reserved.

==============================================================

@I [HLS-10] Setting target device to ' xc7z020clg484-1 '
@I [SYN-201] Setting up clock 'default' with a period of 5.95ns.
@I [HLS-10] Analyzing design file '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp' ... 
@E [HLS-70] Compilation errors found:
In file included from /home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:25:
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:84:5: error: unknown type name 'ap_axiu'
                                ap_axiu<32,1,1,1> in_indices[MAX_NUM_INDICES * MAX_NUM_DAYS],
                                ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:84:12: error: expected ')'
                                ap_axiu<32,1,1,1> in_indices[MAX_NUM_INDICES * MAX_NUM_DAYS],
                                       ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:81:14: note: to match this '('
void frontEnd(
             ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:126:5: error: unknown type name 'ap_axiu'
                                ap_axiu<32,1,1,1> out_correlation[MAX_NUM_INDICES / 2 * (MAX_NUM_INDICES - 1)] )
                                ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:126:12: error: expected ')'
                                ap_axiu<32,1,1,1> out_correlation[MAX_NUM_INDICES / 2 * (MAX_NUM_INDICES - 1)] )
                                       ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:113:13: note: to match this '('
void backEnd(
            ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:127:1: error: expected function body after function declarator
);
^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:93:1: error: no matching function for call to 'frontEnd'
frontEnd(
^~~~~~~~
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/src/correlation_accel_v3.hpp:81:6: note: candidate function not viable: requires 3 arguments, but 11 were provided
void frontEnd(
     ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:108:2: error: use of undeclared identifier 'backEnd'
        backEnd(
        ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:277:12: error: use of undeclared identifier 'conv1'
           conv1.ival   = in_indices[0].data;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:278:27: error: use of undeclared identifier 'conv1'
           shift_reg[1] = conv1.floatval;
                          ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:279:12: error: use of undeclared identifier 'tmp1'
           tmp1.keep    = in_indices[0].keep;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:280:12: error: use of undeclared identifier 'tmp1'
           tmp1.strb    = in_indices[0].strb;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:281:12: error: use of undeclared identifier 'tmp1'
           tmp1.user    = in_indices[0].user;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:282:12: error: use of undeclared identifier 'tmp1'
           tmp1.last    = in_indices[0].last;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:283:12: error: use of undeclared identifier 'tmp1'
           tmp1.id      = in_indices[0].id;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:284:12: error: use of undeclared identifier 'tmp1'
           tmp1.dest    = in_indices[0].dest;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:294:16: error: use of undeclared identifier 'conv1'
               conv1.ival               = in_indices[i].data;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:295:32: error: use of undeclared identifier 'conv1'
               shift_reg[0]     = conv1.floatval;
                                  ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:296:16: error: use of undeclared identifier 'tmp1'
               tmp1.keep                = in_indices[i].keep;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:297:16: error: use of undeclared identifier 'tmp1'
               tmp1.strb                = in_indices[i].strb;
               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
@I [LIC-101] Checked in feature [HLS]
